session-12-config-ingress/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hw12
